# LearnVulkan

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  objdump_as.txt  objdump_gcc.txt  objdump_ld.txt  objdump_pthread.txt
Doc/: 01-Vulkan-Instance.md  02-PhysicalDevice-QueueFamily-Device.md  03-Surface-Swapchain.md  04-Image-ImageView.md  05-Shader.md  06-Pipeline.md  07-RenderPass.md  08-Framebuffer.md  09-CommandBuffer-Semaphore-Fence.md  10-Project-Review.md  11-Inflight-And-Refactor.md  12-Buffer-Uniform-PushConstant.md  13-Texture-Mapping.md  14-3D-Camera.md  15-Depth-Buffer.md  16-Loading-Models.md  17-Generating-Mipmaps.md  README.md
assets/models/: viking_room.mtl
cmake/: compile_glsl.cmake
cmake/toolchains/: mingw64.cmake
shader/: shader.frag  shader.vert
skills/vulkan-doc-blog-style/: SKILL.md
skills/vulkan-doc-blog-style/agents/: openai.yaml
src/: buffer.cpp  camera.cpp  command_manager.cpp  context.cpp  game_object.cpp  main.cpp  material.cpp  math.cpp  model.cpp  render_process.cpp  renderer.cpp  shader.cpp  shader_program.cpp  swapchain.cpp  texture.cpp  tool.cpp  toy2d.cpp
toy2d/: Context.hpp  buffer.hpp  camera.hpp  command_manager.hpp  game_object.hpp  image_resource.hpp  material.hpp  math.hpp  model.hpp  render_process.hpp  renderer.hpp  shader.hpp  shader_program.hpp  swapchain.hpp  texture.hpp  tool.hpp  tool.inl  toy2d.hpp  uniform.hpp  vertex.hpp
